[package]
name = "ABtree"
version = "0.1.0"
edition = "2018"
author = ["Dfree"]
description = "AVL and Btree for rust"
license = "MIT"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
repository = "https://github.com/GuoHao150/ABtree"
keywords = [
	"AVL",
	"Btree"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
